--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Shop</title>
+		<title>Todos</title>
 		<style>
 			:root {
 				color: #222;
@@ -84,7 +84,7 @@
 	</head>
 
 	<body>
-		<h1>DOM API</h1>
+		<h1>JS SUPER SIMPLE TODOS</h1>
 
 		<div>
 			<input type="text" placeholder="todo" />
